--- a/css/style1.css
+++ b/css/style1.css
@@ -1,12 +1,72 @@
-header{
-    vertical-align:middle; 
-    display:inline;
+*{
+    font-family: "Comic Sans MS";
+    outline: 1px solid red;
+    margin: 0%;
 }
 
-#banner{
+
+/* #banner{
     width: 100%;
     height: 250px;
     object-fit: cover; 
-    object-position: -20% 0;
+    object-position: -10% 0;
     
+    
+} */
+
+section{
+    background-color: black;
+    margin-left: 20%;
+    margin-right: 20%;
 }
+h2{
+    color: white;
+}
+img{
+    width: 30px; height: 37px; object-fit: cover; object-position: 100% 0;
+}
+
+/* h2{
+    background-color: black;
+    color: white;
+    text-align: center;
+    padding: 5px;
+    position: absolute;
+    width: 100%;
+}
+
+figure{
+    position: relative;
+    text-align: right;
+}
+
+section{
+    position: relative;
+    text-align: right;
+}
+div{
+    position: relative;
+    text-align: right;
+}
+.logo
+{
+    width: 10em;
+    height: 10em;
+    object-fit: cover;
+} */
+
+/* 
+aside {
+    width: 30%;
+    height: 100%;
+    padding-left: 15px;
+    margin-left: 15px;
+    float: left;
+    font-style: italic;
+  }
+main{
+    padding-left: 35%;
+}
+p{
+    margin-left: 1em;
+} */
