--- a/css/style1.css
+++ b/css/style1.css
@@ -1,115 +1,81 @@
-/*normalizar el documeno*/
+
 *{
-    font-family: "Comic Sans MS"; /**/
-    outline: 1px solid red; /* ver los margenes de los objetos*/
-    margin: 0;
-    padding: 0;
+    /*normalizar el documeno*/
+    margin: 0px;
+    padding: 0px;
     box-sizing: border-box;
+
+    font-family: "Comic Sans MS"; /**/
+
+    /*Check element*/
+    /* outline: 1px solid red;  */
+    
+}
+
+body{
+    margin: 10% 15%;
 }
 /*banner*/
-figure{
-    position: relative;
-
-    
-}
 #banner{
-    width: 100%;
-    height: 15em;
-    object-fit: cover;
+    width: 100%; 
+    height: 9em; 
+    object-fit:cover;
+    object-position: 0% 15%;
+    
 }
-    
-h1{
-    position: absolute;
-    font-size: 3em;
-    text-align: left;
-    
+header>h1{
+    position: fixed;
+    background-color: rgba(255, 255, 255, 0.4);
+    width: 70%;
 }
 
 /*logo*/
-h2{
-    background-color: black;
-    color: white;
-    text-align: center;
-}
-img#logo{
+
+#logo{
     height: 6em;
     float: right;
     position:relative;
     top: -1em;
-    left:-5em;
+    left:-3em;
 
  }
-
- nav{
-    display: block;
- }
-
- h3{
-    font-weight: bold;
- }
-
-/* #banner{
-    width: 100%;
-    height: 250px;
-    object-fit: cover; 
-    object-position: -10% 0;
-    
-    
-} */
-
-/* section{
-    background-color: black;
-    margin-left: 20%;
-    margin-right: 20%;
-}
-h2{
-    color: white;
-}
-img{
-    width: 30px; height: 37px; object-fit: cover; object-position: 100% 0;
-} */
-
-/* h2{
+ h2{
     background-color: black;
     color: white;
     text-align: center;
-    padding: 5px;
-    position: absolute;
-    width: 100%;
+    margin-bottom: 1em;
 }
 
-figure{
-    position: relative;
-    text-align: right;
+
+
+
+
+/*ASIDE*/
+aside{
+    float:left;
+    width: 25%;
+    
 }
 
-section{
-    position: relative;
-    text-align: right;
+nav>a{
+    display: block;
+    margin-bottom: 1.5em;
 }
+
+/*CONTENT*/
 div{
-    position: relative;
-    text-align: right;
+    width: 75%;
+    margin-left: 25%;
+    
 }
-.logo
-{
-    width: 10em;
-    height: 10em;
-    object-fit: cover;
-} */
 
-/* 
-aside {
-    width: 30%;
-    height: 100%;
-    padding-left: 15px;
-    margin-left: 15px;
-    float: left;
-    font-style: italic;
-  }
-main{
-    padding-left: 35%;
-}
-p{
+ div h3{
+    font-weight: bold;
+ } 
+ div p{
     margin-left: 1em;
-} */
+ }
+
+
+
+
