--- a/css/style1.css
+++ b/css/style1.css
@@ -1,81 +1,67 @@
+* {
+  /*normalizar el documeno*/
+  margin: 0px;
+  padding: 0px;
+  box-sizing: border-box;
 
-*{
-    /*normalizar el documeno*/
-    margin: 0px;
-    padding: 0px;
-    box-sizing: border-box;
+  font-family: 'Comic Sans MS'; /**/
 
-    font-family: "Comic Sans MS"; /**/
-
-    /*Check element*/
-    /* outline: 1px solid red;  */
-    
+  /*Check element*/
+  /* outline: 1px solid red;  */
 }
 
-body{
-    margin: 10% 15%;
+body {
+  margin: 10% 15%;
 }
 /*banner*/
-#banner{
-    width: 100%; 
-    height: 9em; 
-    object-fit:cover;
-    object-position: 0% 15%;
-    
+#banner {
+  width: 100%;
+  height: 9em;
+  object-fit: cover;
+  object-position: 0% 15%;
 }
-header>h1{
-    position: fixed;
-    background-color: rgba(255, 255, 255, 0.4);
-    width: 70%;
+header > h1 {
+  position: fixed;
+  background-color: rgba(255, 255, 255, 0.4);
+  width: 70%;
 }
 
 /*logo*/
 
-#logo{
-    height: 6em;
-    float: right;
-    position:relative;
-    top: -1em;
-    left:-3em;
-
- }
- h2{
-    background-color: black;
-    color: white;
-    text-align: center;
-    margin-bottom: 1em;
+#logo {
+  height: 6em;
+  float: right;
+  position: relative;
+  top: -1em;
+  left: -3em;
 }
-
-
-
-
+h2 {
+  background-color: black;
+  color: white;
+  text-align: center;
+  margin-bottom: 1em;
+}
 
 /*ASIDE*/
-aside{
-    float:left;
-    width: 25%;
-    
+aside {
+  float: left;
+  width: 25%;
 }
 
-nav>a{
-    display: block;
-    margin-bottom: 1.5em;
+nav > a {
+  display: block;
+  margin-bottom: 1.5em;
 }
 
 /*CONTENT*/
-div{
-    width: 75%;
-    margin-left: 25%;
-    
+div {
+  width: 75%;
+  margin-left: 25%;
 }
 
- div h3{
-    font-weight: bold;
- } 
- div p{
-    margin-left: 1em;
- }
-
-
-
-
+div h3 {
+  font-weight: bold;
+}
+div p {
+  margin-left: 1em;
+}
