--- a/css/style2.css
+++ b/css/style2.css
@@ -1,82 +1,76 @@
-*{
-    /*normalizar el documeno*/
-    margin: 0px;
-    padding: 0px;
-    box-sizing: border-box;
+* {
+  /*normalizar el documeno*/
+  margin: 0px;
+  padding: 0px;
+  box-sizing: border-box;
 
-    font-family: "Comic Sans MS"; /**/
+  font-family: 'Comic Sans MS'; /**/
 
-    /*Check element*/
-    /* outline: 1px solid red;  */
-    
+  /*Check element*/
+  /* outline: 1px solid red;  */
 }
 
-body{
-    margin: 1em 1.5em;
+body {
+  margin: 1em 1.5em;
 }
 /*banner*/
-#banner{
-    width: 100%; 
-    height: 9em; 
-    object-fit:cover;
-    object-position: 0% 15%;
-    
+#banner {
+  width: 100%;
+  height: 9em;
+  object-fit: cover;
+  object-position: 0% 15%;
 }
-body h1{
-    font-style: oblique;
+body h1 {
+  font-style: oblique;
 }
 
 h2 {
-    text-align: center;
+  text-align: center;
 }
-section{
-    border: 1px solid black;
+section {
+  border: 1px solid black;
 }
 /*MENU*/
-aside{
-    text-align: right;
-    position:relative;
-    top: -12em;
- 
+aside {
+  text-align: right;
+  position: relative;
+  top: -12em;
 }
-nav{
-    display: inline;
-    text-align: right;
+nav {
+  display: inline;
+  text-align: right;
 }
-nav>a{
-    border: 1px solid black;
-    box-shadow: 5px 5px 0px  rgba(0, 0, 0, 0.5);
-    padding-left: 1em;
-    padding-right: 1em;
-    margin-right: 0.5em;
-    background-color: #4472C4;
-    color: white;
-    text-decoration:none;
+nav > a {
+  border: 1px solid black;
+  box-shadow: 5px 5px 0px rgba(0, 0, 0, 0.5);
+  padding-left: 1em;
+  padding-right: 1em;
+  margin-right: 0.5em;
+  background-color: #4472c4;
+  color: white;
+  text-decoration: none;
 }
-nav>a:first-of-type{
-    background-color: #70AD47;
+nav > a:first-of-type {
+  background-color: #70ad47;
 }
 /*logo*/
 
-#logo{
-    width: 6em;
-    float: left; 
-    position:relative; 
-    top: 3.5em;
-    left:0em;
-
- }
+#logo {
+  width: 6em;
+  float: left;
+  position: relative;
+  top: 3.5em;
+  left: 0em;
+}
 /*CONTENT*/
-div{
-    
-    width: 70%;
-    margin-left: 9em;
-    
+div {
+  width: 70%;
+  margin-left: 9em;
 }
 
- div h3{
-    font-weight: bold;
- } 
- div p{
-    margin-left: 1em;
- }
+div h3 {
+  font-weight: bold;
+}
+div p {
+  margin-left: 1em;
+}
