--- a/css/style3.css
+++ b/css/style3.css
@@ -1,99 +1,88 @@
-*{
-    /*normalizar el documeno*/
-    margin: 0px;
-    padding: 0px;
-    box-sizing: border-box;
+* {
+  /*normalicion del documeno*/
+  margin: 0px;
+  padding: 0px;
+  box-sizing: border-box;
 
-    font-family: "Comic Sans MS"; /**/
+  font-family: 'Comic Sans MS'; /**/
 
-    /*Check element*/
-    /* outline: 1px solid red; */
-    background-color: white;
-    
+  /*Check element*/
+  /* outline: 1px solid red; */
+  background-color: white;
 }
 /*BANNER*/
-#banner{
-    width: 100%; 
-    height: 12em; 
-    object-fit:cover;
-    object-position: 0% 15%;
-    
+#banner {
+  width: 100%;
+  height: 12em;
+  object-fit: cover;
+  object-position: 0% 15%;
 }
-header>h1{
-    position: fixed;
-    background-color: rgba(255, 255, 255, 0.5);
-    margin-right: 50%;
-    width: 100%;
-    text-align: left;
-    margin-top: 5%;
+header > h1 {
+  position: fixed;
+  background-color: rgba(255, 255, 255, 0.5);
+  margin-right: 50%;
+  width: 100%;
+  text-align: left;
+  margin-top: 5%;
 }
 /*LOGO*/
-#logo{
-    height: 10em;
-    float: right;
-    position:relative;
-    top: -12em;
-    left:-2em;
-    rotate: 25deg;
-    border: 2px solid yellow;
-
- }
+#logo {
+  height: 10em;
+  float: right;
+  position: relative;
+  top: -12em;
+  left: -2em;
+  rotate: 25deg;
+  border: 2px solid yellow;
+}
 /*TITLE*/
-section h2{
-    text-align: center;
-    color:green;
-    background-color: black;
-    padding: 0.2em;
-    border: 1px solid red;
+section h2 {
+  text-align: center;
+  color: green;
+  background-color: black;
+  padding: 0.2em;
+  border: 1px solid red;
 }
 
-main{
-    display:inline;
+main {
+  display: inline;
 }
 
 /*MENU*/
-aside{
-    width:30%;
-    float:left;
-    
+aside {
+  width: 30%;
+  float: left;
 }
-aside > nav{
-    /* transform: rotate(-90deg); */
-    /* display:inline; */
-    display: block
-    
+aside > nav {
+  /* transform: rotate(-90deg); */
+  /* display:inline; */
+  display: block;
 }
 nav {
-    
-    background:#5FA199;
-    padding: 10px 0px;
-    display: block
-    /* float: right; */
-    
-    /* top: 47%; */
-    /* left:-30%; */
-    /* text-align: left; */
+  background: #5fa199;
+  padding: 10px 0px;
+  display: block;
+  /* float: right; */
 
+  /* top: 47%; */
+  /* left:-30%; */
+  /* text-align: left; */
 }
-nav>a{
-    padding: 5px;
-    margin: 1em 0em 1em 0em;
-    font-size: 1em;
-    color: yellow;
-    text-decoration: none;
-    background-color:black;
-    display: block;
-    text-align: center;
-        
-    
-    
+nav > a {
+  padding: 5px;
+  margin: 1em 0em 1em 0em;
+  font-size: 1em;
+  color: yellow;
+  text-decoration: none;
+  background-color: black;
+  display: block;
+  text-align: center;
 }
 
-div{
-    margin-left: 31%;    
-    margin-top: 10px;
-
+div {
+  margin-left: 31%;
+  margin-top: 10px;
 }
-div p{
-    margin-bottom: 20px;
+div p {
+  margin-bottom: 20px;
 }
